@@ -1,3 +1,4 @@
+import com.google.common.collect.Lists;
 import com.tyy.TApplication;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
@@ -9,9 +10,12 @@ import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.time.LocalDate;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @SpringBootTest(classes = {TApplication.class})
@@ -25,38 +29,57 @@ class GenarateEsgDataTest {
 
     @Test
     void test() {
-        List<Map<String, Object>> data = buildData();
 
-        MapSqlParameterSource[] mapSqlParameterSources = new MapSqlParameterSource[data.size()];
+        List<LocalDate> dates = List.of(
+                LocalDate.of(2022, 1, 1),
+                LocalDate.of(2022, 3, 3),
+                LocalDate.of(2022, 5, 5),
+                LocalDate.of(2022, 8, 8),
+                LocalDate.of(2022, 10, 10),
+                LocalDate.of(2022, 12, 12)
+        );
 
-        data.stream().map(MapSqlParameterSource::new).toList().toArray(mapSqlParameterSources);
+        List<Map<String, Object>> allData = dates.parallelStream()
+                .flatMap(date -> Stream.of(
+                        buildDataMSCI(date),
+                        buildDataSRLD(date)
+                )).flatMap(Collection::stream)
+                .collect(Collectors.toList());
 
-        jdbcTemplate.batchUpdate(
-                "insert into esg_score_stock(report_date, stock_code, esg_organization_id, total_score, rating, environment, social, governance, creator)" +
-                        " values (:report_date,:stock_code,:esg_organization_id,:total_score,:rating,:environment,:social,:governance,:creator)",
-                mapSqlParameterSources);
-        log.info("update success! size = {}", data.size());
+
+        Lists.partition(allData, 1000).parallelStream().forEach(data -> {
+
+            MapSqlParameterSource[] mapSqlParameterSources = data.stream()
+                    .map(MapSqlParameterSource::new)
+                    .toList()
+                    .toArray(new MapSqlParameterSource[data.size()]);
+
+            log.info("start to update data , size = {}", mapSqlParameterSources.length);
+            jdbcTemplate.batchUpdate(
+                    "insert into esg_score_stock(report_date, stock_code, esg_organization_id, total_score, rating, environment, social, governance, creator)" +
+                            " values (:report_date,:stock_code,:esg_organization_id,:total_score,:rating,:environment,:social,:governance,:creator)",
+                    mapSqlParameterSources);
+        });
 
     }
 
 
-    private List<Map<String, Object>> buildData() {
+    private List<Map<String, Object>> buildDataMSCI(LocalDate date) {
 
-        LocalDate date = LocalDate.of(2023, 4, 1);
-        String orgId = "477aff7e-c922-4130-814d-f9b6434fd476";
+        String orgId = "cb3dbc34-8c9f-e87a-602d-9128a5f91a8d";
         String userId = "c849a465-f951-40d8-ad3b-a76c1f9edf4b";
         List<String> stockCodes = jdbcTemplate.query("select code from stock_basic_info", (row, index) -> row.getString(1));
         Random random = new Random();
 
-
+        log.info("start genarate msci data at {}", date);
         return stockCodes.parallelStream().map(stockCode -> {
 
-            double score1 = random.nextDouble(0, 100);
-            double score2 = random.nextDouble(0, 100 - score1);
-            double score3 = random.nextDouble(0, 100 - score1 - score2);
+            double score1 = random.nextDouble(0, 10);
+            double score2 = random.nextDouble(0, 10);
+            double score3 = random.nextDouble(0, 10);
 
-            double total = score1 + score2 + score3;
-            String rating = getRating(total);
+            double total = (score1 + score2 + score3) / 3;
+            String rating = getRatingSRLD(total);
             return Map.<String, Object>of(
                     "report_date", date,
                     "stock_code", stockCode,
@@ -71,12 +94,58 @@ class GenarateEsgDataTest {
         }).toList();
     }
 
-    private String getRating(double total) {
-        if (total > 80) return "A";
-        if (total > 60) return "B";
-        if (total > 40) return "C";
-        if (total > 20) return "D";
-        return "E";
+    private List<Map<String, Object>> buildDataSRLD(LocalDate date) {
+
+        String orgId = "69316c5d-c8eb-46ce-a757-cb56f9f96ffa";
+        String userId = "c849a465-f951-40d8-ad3b-a76c1f9edf4b";
+        List<String> stockCodes = jdbcTemplate.query("select code from stock_basic_info", (row, index) -> row.getString(1));
+        Random random = new Random();
+
+        log.info("start genarate SRLD data at {}", date);
+        return stockCodes.parallelStream().map(stockCode -> {
+
+            double score1 = random.nextDouble(0, 100);
+            double score2 = random.nextDouble(0, 100);
+            double score3 = random.nextDouble(0, 100);
+
+            double total = (score1 + score2 + score3) / 3;
+            String rating = getRatingSRLD(total);
+            return Map.<String, Object>of(
+                    "report_date", date,
+                    "stock_code", stockCode,
+                    "esg_organization_id", orgId,
+                    "total_score", total,
+                    "rating", rating,
+                    "environment", score1,
+                    "social", score2,
+                    "governance", score3,
+                    "creator", userId
+            );
+        }).toList();
+    }
+
+
+    private String getRatingSRLD(double total) {
+        if (total >= 90) return "A+";
+        if (total >= 80) return "A";
+        if (total >= 70) return "A-";
+        if (total >= 60) return "B+";
+        if (total >= 50) return "B";
+        if (total >= 40) return "B-";
+        if (total >= 30) return "C+";
+        if (total >= 20) return "C";
+        if (total >= 10) return "C-";
+        return "D";
+    }
+
+    private String getRatingMSCI(double total) {
+        if (total > 8.571) return "AAA";
+        if (total > 7.143) return "AA";
+        if (total > 5.714) return "A";
+        if (total > 4.286) return "BBB";
+        if (total > 2.857) return "BB";
+        if (total > 1.429) return "B";
+        return "CCC";
     }
 
 
